完成webpack基本打包配置

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="telephone=no" name="format-detection">
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="#" />
-    <title>clinic-chat-room</title>
+    <title>深圳健康网云诊所</title>
 </head>
 
 <body>
